--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://vendys.etc --acl public-read",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
