--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.562.0",
+    "filepond": "^4.7.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-filepond": "^7.0.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
